Fix display on mobile. Fixes #23

--- a/app/frontend/static/styles/more.css
+++ b/app/frontend/static/styles/more.css
@@ -161,6 +161,7 @@ ul.wordcloud li { display: inline-block; }
 
 .search-result h2 {
   margin-top: 0;
+  font-size: 20px;
 }
 
 .entities a {
